--- a/src/styles/Shared.module.css
+++ b/src/styles/Shared.module.css
@@ -24,9 +24,18 @@
 
 /* Q&A Section */
 .qaSection {
-  padding: 3rem 20rem;
-  background-color: #2d3748; /* bg-gray-800 */
+  width: 100%;
+  max-width: 50rem; /* Adjust the max width as needed */
+  margin: 0 auto; /* Centers the section */
+  padding: 3rem 1rem; /* Less padding for better responsiveness */
   color: #f7fafc; /* text-gray-100 */
+}
+
+@media (max-width: 768px) {
+  .qaSection {
+    max-width: 90%; /* Make it slightly wider on smaller screens */
+    padding: 2rem 1rem; /* Reduce padding for better fit */
+  }
 }
 
 .qaSection .question {
@@ -76,7 +85,9 @@
   color: #ffffff; /* text-white */
   padding: 0.5rem 1.5rem;
   border-radius: 0.375rem;
-  transition: transform 0.3s, background-color 0.3s;
+  transition:
+    transform 0.3s,
+    background-color 0.3s;
 }
 
 .ctaSection button:hover {
