--- a/src/styles/shared.css
+++ b/src/styles/shared.css
@@ -42,7 +42,11 @@
 }
 
 @keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
     transform: translateY(0);
   }
   40% {
@@ -125,7 +129,6 @@ button:not(:last-child) {
   @apply mr-4; /* Optional: Adds spacing between buttons, if needed */
 }
 
-
 .featuresSection {
   @apply py-12 px-5 bg-gray-800 text-gray-200; /* Dark mode background and text */
   animation: fadeIn 1.5s ease-in;
@@ -143,7 +146,9 @@ button:not(:last-child) {
 .feature {
   @apply w-full md:w-1/3 text-center p-6 border border-gray-700 rounded-lg bg-gray-900 hover:bg-gray-700;
   animation: zoomIn 1.5s ease-out;
-  transition: transform 0.3s ease-in-out, background-color 0.3s ease-in-out;
+  transition:
+    transform 0.3s ease-in-out,
+    background-color 0.3s ease-in-out;
 }
 
 .feature h3 {
