--- a/src/styles/Shared.module.css
+++ b/src/styles/Shared.module.css
@@ -25,16 +25,14 @@
 /* Q&A Section */
 .qaSection {
   width: 100%;
-  max-width: 50rem;
-  margin: 0 auto;
-  padding: 3rem 1rem;
+  padding: 3rem 6rem 1rem 6rem;
   background-color: var(--bg-secondary);
   color: var(--text-primary);
 }
 
 @media (max-width: 768px) {
   .qaSection {
-    max-width: 90%;
+    /* max-width: 90%; */
     padding: 2rem 1rem;
   }
 }
@@ -83,7 +81,7 @@
 .ctaSection button {
   margin-top: 1.5rem;
   background-color: var(--button-bg);
-  color: var(--button-text);
+  color: var(--text-secondary);
   padding: 0.5rem 1.5rem;
   border-radius: 0.375rem;
   transition:
