--- a/src/styles/Shared.module.css
+++ b/src/styles/Shared.module.css
@@ -4,7 +4,7 @@
 .introSection {
   padding: 3rem 1rem;
   text-align: center;
-  background-color: var(--bg-secondary);
+  background-color: var(--bg-primary);
   color: var(--text-primary);
 }
 
@@ -19,14 +19,14 @@
   max-width: 40rem;
   margin: 0 auto;
   font-size: 1.125rem;
-  color: var(--text-secondary);
+  color: var(--text-primary);
 }
 
 /* Q&A Section */
 .qaSection {
   width: 100%;
   padding: 3rem 6rem 1rem 6rem;
-  background-color: var(--bg-secondary);
+  background-color: var(--bg-primary);
   color: var(--text-primary);
 }
 
@@ -53,7 +53,7 @@
 
 .qaSection .answer p {
   font-size: 1.125rem;
-  color: var(--text-secondary);
+  color: var(--text-primary);
 }
 
 /* Call-to-Action Section */
