--- a/src/styles/Dashboard.module.css
+++ b/src/styles/Dashboard.module.css
@@ -2,7 +2,7 @@
 .dashboardContainer {
   width: 100%;
   min-height: 100vh;
-  background-color: var(--bg-primary);
+  background-color: var(--fg-color);
   color: var(--text-secondary);
   display: flex;
   justify-content: center;
@@ -21,7 +21,7 @@
 
 /* User Overview */
 .userOverview {
-  background: var(--bg-secondary); /* Uses theme variable */
+  background: var(--bg-secondary);
   padding: 20px;
   border-radius: 8px;
   font-size: 1.2rem;
