--- a/src/styles/Shared.module.css
+++ b/src/styles/Shared.module.css
@@ -1,4 +1,4 @@
-/* About, Privacy and Terms Page Styling */
+/* Shared Page Styling */
 
 /* Introduction Section */
 .introSection {
@@ -32,7 +32,6 @@
 
 @media (max-width: 768px) {
   .qaSection {
-    /* max-width: 90%; */
     padding: 2rem 1rem;
   }
 }
@@ -54,6 +53,58 @@
 .qaSection .answer p {
   font-size: 1.125rem;
   color: var(--text-secondary);
+}
+
+/* Contact Form Section */
+.contactSection {
+  padding: 3rem 1rem;
+  background-color: var(--fg-color);
+  color: var(--text-secondary);
+  text-align: center;
+}
+
+.contactForm {
+  max-width: 40rem;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+.contactForm label {
+  font-size: 1rem;
+  color: var(--text-accent);
+  text-align: left;
+}
+
+.contactForm input,
+.contactForm textarea {
+  width: 100%;
+  padding: 0.75rem;
+  border: 1px solid var(--text-accent);
+  border-radius: 0.375rem;
+  background-color: var(--bg-color);
+  color: var(--text-secondary);
+}
+
+.contactForm textarea {
+  resize: vertical;
+  min-height: 8rem;
+}
+
+.contactForm button {
+  background-color: var(--button-bg);
+  color: var(--both);
+  padding: 0.75rem 1.5rem;
+  border-radius: 0.375rem;
+  transition:
+    transform 0.3s,
+    background-color 0.3s;
+}
+
+.contactForm button:hover {
+  background-color: var(--button-hover);
+  transform: scale(1.05);
 }
 
 /* Call-to-Action Section */
@@ -81,7 +132,7 @@
 .ctaSection button {
   margin-top: 1.5rem;
   background-color: var(--button-bg);
-  color: var(--text-secondary);
+  color: var(--both);
   padding: 0.5rem 1.5rem;
   border-radius: 0.375rem;
   transition:
