--- a/src/styles/Sidebar.module.css
+++ b/src/styles/Sidebar.module.css
@@ -49,7 +49,7 @@
   margin-top: 15px;
   padding: 10px;
   background: var(--button-bg);
-  color: var(--text-secondary);
+  color: var(--both);
   border: none;
   cursor: pointer;
   text-align: left;
@@ -63,7 +63,6 @@
 
 .themeToggle:hover {
   background: var(--button-hover-bg);
-  color: var(--text-secondary);
 }
 
 /* Logout Button */
@@ -125,7 +124,7 @@
   position: fixed;
   top: 15px;
   left: 15px;
-  color: var(--menu-color);
+  color: var(--both);
   border: steelblue;
   padding: 10px;
   cursor: pointer;
@@ -136,7 +135,8 @@
 }
 
 .menuButton:hover {
-  background: var(--bg-accent);
+  background: var(--fg-accent);
+  color: var(--both);
 }
 
 /* Hide the menu button when the sidebar is open */
