--- a/src/styles/Dashboard.module.css
+++ b/src/styles/Dashboard.module.css
@@ -1,4 +1,4 @@
-.dashboardContainer {
+/* .dashboardContainer {
   width: 100%;
   min-height: 100vh;
   background-color: var(--fg-color);
@@ -73,4 +73,4 @@
   .quickActions {
     flex-direction: column;
   }
-}
+} */
